# Paddle-And-Ball

appdirectory/: Assignment2.cpp  Assignment2.h  Ball.cpp  Ball.h  BaseApplication.h  GuiManager.cpp  GuiManager.h  Makefile  Makefile.am  Makefile.in  Paddle.cpp  Paddle.h  README.txt  ScoreManager.cpp  ScoreManager.h  Simulator.cpp  Simulator.h  TutorialApplication.cpp  TutorialApplication.h  Wall.cpp  Wall.h  assignment2  config.status  configure  configure.ac  delete.sh  resources.cfg
appdirectory/.deps/: assignment2-Assignment2.Po  assignment2-Ball.Po  assignment2-BaseApplication.Po  assignment2-GuiManager.Po  assignment2-Paddle.Po  assignment2-ScoreManager.Po  assignment2-Simulator.Po  assignment2-Wall.Po
appdirectory/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
appdirectory/res/: paddle.material  squash.material  squash_back.tga  squash_ball.tga  squash_bottom.tga  squash_left.tga  squash_right.tga  squash_top.tga
